Add example activity card for Chess Club in activities section

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -16,6 +16,18 @@
       <section id="activities-container">
         <h3>Available Activities</h3>
         <div id="activities-list">
+          <!-- Example of dynamically generated activity card -->
+          <div class="activity-card">
+            <h4>Chess Club</h4>
+            <p><strong>Description:</strong> Learn strategies and compete in chess tournaments</p>
+            <p><strong>Schedule:</strong> Fridays, 3:30 PM - 5:00 PM</p>
+            <p><strong>Max Participants:</strong> 12</p>
+            <p><strong>Participants:</strong></p>
+            <ul>
+              <li>michael@mergington.edu</li>
+              <li>daniel@mergington.edu</li>
+            </ul>
+          </div>
           <!-- Activities will be loaded here -->
           <p>Loading activities...</p>
         </div>
